manifests/calendso/calendso.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendso
  namespace: calendso
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: calendso
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calendso
  namespace: calendso
spec:
  replicas: 1
  serviceName: calendso
  selector:
    matchLabels:
      app: calendso
  template:
    metadata:
      labels:
        app: calendso
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - name: web
        image: docker.cluster.fun/private/calendso:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: web
      # - name: postgres
      #   image: postgres:9-alpine
      #   imagePullPolicy: IfNotPresent
      #   ports:
      #   - containerPort: 5432
      #     name: db
      #   env:
      #   - name: POSTGRES_USER
      #     valueFrom:
      #       secretKeyRef:
      #         name: calendso
      #         key: POSTGRES_USER
      #   - name: POSTGRES_PASSWORD
      #     valueFrom:
      #       secretKeyRef:
      #         name: calendso
      #         key: POSTGRES_PASSWORD
      #   - name: POSTGRES_DB
      #     value: calendso
      #   - name: PGDATA
      #     value: /var/lib/postgresql/data/calendso
      #   volumeMounts:
      #   - name: data
      #     mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendso
  namespace: calendso
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meet.marcusnoble.co.uk
    secretName: calendso-ingress
  rules:
  - host: meet.marcusnoble.co.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: calendso
            port:
              number: 80
